@@ -1,3 +1,6 @@
+2008-05-23
+ Started on plugins.
+
 2008-04-09
  Added color option for unchanged text.
 
